# itry

./: .gitignore  CMakeLists.backc  CMakeLists.txt  CMakePresets.json  compiler-run.sh  compiler.sh  debug.sh  language.ebnf  now.md  run.sh  run_output.sh
.cache/clangd/index/: Lexer.hpp.1AC5E1628020D053.idx  Token.cpp.A619EFD03A7188E2.idx  Token.hpp.C0C8F5900F9998D3.idx  lexer.hpp.5A914F5C534632F5.idx  main.cpp.337E82FFF49A5BD3.idx
.devcontainer/: devcontainer.json  setup.sh
code/: main.itry  main.txt
include/: Lexer.hpp  Token.hpp  ast.hpp  irCodegen.hpp  itryAotIrBuilder.hpp  itryIRBuilder.hpp  itryJIT.hpp  itryJITIRBuilder.hpp  itryType.hpp  lexer.hpp  parser.hpp  symbolTable.hpp  token.hpp
src/: Token.cpp  ast.cpp  irCodegen.cpp  itryType.cpp  main.cpp  parser.cpp  token.cpp
